css/styles.css
/* Variables */

:root { /* C64 colors from https://www.pepto.de/projects/colorvic/ */
    --black: #000000;
    /* --black: #1b1b1b; */
    --white: #ffffff;
    /* --white: #fff8e7; */
    --red: #813338;
    --cyan: #75cec8;
    --purple: #8e3c97;
    --green: #56ac4d;
    --blue: #2e2c9b;
    --yellow: #edf171;
    --orange: #8e5029;
    --brown: #553800;
    --lt-red: #c46c71;
    --dk-grey: #4a4a4a;
    --md-grey: #7b7b7b;
    --lt-green: #a9ff9f;
    --lt-blue: #706deb;
    --lt-grey: #b2b2b2;
}

:root {
    --border-color: var(--white);
    --border-color-alt: var(--lt-grey);
    --bg-color: var(--white);
    --title-color: var(--black);
    --heading-color: var(--black);
    --text-color: var(--black);
    --link-color: var(--black);
    --link-hover-color: var(--black);
    --note-color: var(--md-grey);
    --main-font-family: 'Courier New', Courier, monospace; 
}

/* Default styles */

*, *::before, *::after {
    box-sizing: border-box;
}
  
body { 
    line-height: 1.5; /* This requires customizing the line height for larger text. */
    background-color: var(--border-color);
    background-image:  repeating-linear-gradient(45deg, var(--border-color) 25%, transparent 25%, transparent 75%, var(--border-color) 75%, var(--border-color)), repeating-linear-gradient(45deg, var(--border-color) 25%, var(--border-color-alt) 25%, var(--border-color-alt) 75%, var(--border-color) 75%, var(--border-color));
    background-position: 0 0, 3px 3px;
    background-size: 6px 6px;
    /* width: 100vw; */
    margin: 0;
    /* position: relative; */
}

/* .color-div {
    position: fixed;
    height: 100vh;
    width: 100vw;
    background-color: #fff8e7;
    opacity: 20%;
    pointer-events: none;
} */

p, h1, h2, h3, h4, h5, h6, ul {
    font-family: var(--main-font-family);
}

h1, h2, h3, h4, h5 {
    color: var(--heading-color);
    line-height: 1em;
}

p {
    color: var(--text-color);
}

input, button, textarea, select, text {
    font-family: var(--main-font-family);
}

a,
a:visited {
    color: var(--link-color);
    font-weight: bold;
}

a:hover {
    background-color: var(--link-color);
    color: var(--bg-color);
    text-decoration: none;
}

img {
    max-width: 100%;
    max-height: 100%;
    object-fit: contain;
    display: block;
}

/* Navigation */

header {
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
}

.time {
    background-color: var(--bg-color);
    border: 2px solid var(--text-color);
    padding: 3.2px 6.4px;
    font-family: var(--main-font-family);
    font-weight: bold;
    color: var(--text-color);
    height: max-content;
}

nav {
    max-width: 100vw;
}

nav ul {
    background-color: var(--bg-color);
    border: 2px solid var(--text-color);
    list-style-type: none;
    display: flex;
    flex-wrap: nowrap;
    padding: 0 0 0 0;
    margin-top: 0;
    max-width: max-content;
    overflow: auto;
    margin-bottom: 0;
}

nav li {
    border-left: 2px dotted var(--text-color);
    text-transform: lowercase;
}

nav li:first-of-type {
    border-left: none;
}

nav a,
nav a:visited,
nav p {
    padding: 3.2px 6.4px;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo-image img {
    height: 1.4rem;
    width: 1.4rem;
}

.logo-image img:first-of-type {
    display: none;
}

.logo-image:hover img:first-of-type {
    display: block;
}

.logo-image:hover img:last-of-type {
    display: none;
}

/* Content window */

.content-window {
    background-color: var(--bg-color);
    max-width: 90ch;
    margin: 16px;
    height: max-content;
    border: 2px solid var(--text-color);
    box-shadow: 5px 5px 0 var(--border-color-alt);
}

.big-window {
    min-width: 100%;
    min-height: 100vh;
    margin: 0;
}

.title-bar {
    height: max-content;
    border-bottom: 2px solid var(--text-color);
    overflow: hidden;
}

.title-lines {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.lines {
    width: 100%;
    flex: 1 1;
}

.lines-left {
    display: flex;
    flex-wrap: nowrap;
    width: 100%;
    align-items: center;
}

.lines-left-of-button {
    flex-grow: 1;
}

.big-button {
    border: 2px solid var(--text-color);
    margin: 2px;
    padding: 2px;
    height: 1rem;
    width: 1rem;
    cursor: pointer;
}

.inside-button {
    background-color: var(--text-color);
    height: 100%;
    width: 100%;
}

.title-bar-line {
    border-top: none;
    padding: 0;
    margin: 0.1rem 0;
    border-bottom: 2px solid var(--text-color);
    min-width: 1rem;
}

.title-bar-title {
    font-family: var(--main-font-family);
    font-size: 1rem;
    line-height: 1rem;
    font-weight: bold;
    padding: 0.2rem 0.4rem 0;
    margin: 0;
    text-transform: uppercase;
    text-wrap: nowrap;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    flex-grow: 0;
    gap: 1rem;
}

.title-bar-title a,
.title-bar-title a:hover {
    text-decoration: none;
    color: var(--text-color);
    background-color: var(--bg-color);
}

.title-text {
    font-size: 1rem;
    display: inline;
}

.backlink.home-title {
    display: none;
}

.first-slash.home-title {
    display: none;
}

.window-nav {
    min-width: 100%;
    background-color: var(--bg-color);
    border-bottom: 2px solid var(--text-color);
    list-style-type: none;
    display: flex;
    flex-wrap: nowrap;
    padding: 0 0 0 0;
    margin-top: 0;
    max-width: max-content;
    overflow: auto;
    margin-bottom: 0;
}

.window-nav li {
    text-transform: lowercase;
}

.window-nav a,
.window-nav a:visited,
.window-nav p {
    padding: 3.2px 6.4px;
    text-decoration: none;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Main content */

main {
    background-color: var(--bg-color);
    padding: 1rem;
    /* max-width: 90ch; */
    word-wrap: break-word;
}

main *:first-child {
    margin-top: 0;
}

main *:last-child {
    margin-bottom: 0;
}

.invisible {
    display: none;
}

.reply-buttons {
    display: flex;
    flex-wrap: wrap;
    gap: 0.4rem;
    margin-top: 0.8rem;
}

.post-card {
    margin: 0 0 1.5rem 0;
}

.post-card h2 {
    margin-bottom: 0.2rem;
}

.post-card-summary {
    margin-bottom: 0.2rem;
}

.photo-wall {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: auto;
    gap: 1rem;
}

.photo-wall div {
    height: 100%;
    aspect-ratio: 1 / 1;
}

.photo-wall img {
    object-fit: cover;
    min-height: 100%;
    min-width: 100%;
}

.p-summary,
.post-card-summary {
    color: var(--note-color);
    margin-top: 0;
    font-style: italic;
}

.post-card .date,
p.date {
    font-size: 0.7rem;
    line-height: 0.7rem;
    margin: 0;
    font-weight: bold;
}

.post-card-note {
    font-weight: normal;
    margin-bottom: 0.2rem;
}

.post-card-note p:last-of-type {
    margin-bottom: 0;
}

.article-date {
    font-size: 0.7rem;
    line-height: 0.7rem;
}

.c64-code,
.c64-code-inner {
    background-color: var(--blue);
    color: var(--lt-blue);
    overflow: auto;
}

.c64-code-outer {
    background-color: var(--lt-blue);
    padding: 2rem;
    border: 2px solid var(--text-color);
}

.pages {
    margin-bottom: 0.8rem;
}

.pages ul {
    display: flex;
    flex-wrap: wrap;
    gap: 0.4rem;
    list-style-type: none;
    padding: 0;
}

ul.pages,
ul.posts {
    margin-bottom: 0;
}

.pages ul li a {
    padding: 0.4rem 0.4rem;
}

.home-latest {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
}

.home-latest > div {
    flex: 1 0 200px;
}

.tags {
    display: flex;
    gap: 0.4rem;
    flex-wrap: wrap;
}

.tags a,
.tags p {
    margin: 0;
    font-size: 0.7rem;
    font-family: var(--main-font-family);
}

.link-button {
    height: 31px;
}

.bookmarklet {
    display: block;
    border: 2px solid var(--text-color);
    width: 100px;
    overflow: hidden;
    text-wrap: nowrap;
    font-size: 0.7rem;
    text-align: center;
    padding: 0.6rem 0.4rem;
    text-decoration: none;
    box-shadow: 2px 2px var(--md-grey);
}

.bookmarklet:hover {
    color: inherit;
    background-color: inherit;
    box-shadow: 1px 1px var(--dk-grey);
}

.leaf {
    border-bottom: 2px solid var(--text-color);
    margin: 0 0 4px 0;
}

.leaves {
    margin-top: auto;
}

.blogroll ul {
    list-style-type: none;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    gap: 0.7rem;
}

.blogroll a {
    margin: 0;
}

.note {
    font-size: 0.8em;
    color: var(--dk-grey);
}

/* Footer */

footer {
    margin: 1rem;
    display: flex;
    flex-wrap: wrap;
    max-width: 750px;
}

.link-icon {
    text-decoration: none;
    margin: 0.4rem;
    position: relative;
    height: 31px;
    width: 88px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
}

.link-icon:hover {
    color: inherit;
    background-color: inherit;
}

.link-icon > * {
    position: absolute;
}

.icon-image {
    max-height: 62px;
    max-width: 176px;
}

.icon-text {
    display: flex;
    justify-content: space-around;
    align-items: center;
    text-align: center;
    font-weight: normal;
    font-size: 12px;
    font-family: var(--main-font-family);
    line-height: 1em;
    word-wrap: break-word;
    width: 84px;
    filter: 
        drop-shadow(1px 0 0 white) 
        drop-shadow(-1px 0 0 white) 
        drop-shadow(0 1px 0 white) 
        drop-shadow(0 -1px 0 white);
}

.icon-text a {
    text-decoration: none;
}

.icon-text a:hover {
    background-color: inherit;
    color: inherit;
}

.icon-border {
    pointer-events: none;
}

/* Media styles */

@media (max-width: 600px) {
    .time {
        display: none;
    }
}

